Fixing a bug where the item tooltip would go behind the active nav item. Removing unnecessary z index

--- a/src/components/tooltip.css
+++ b/src/components/tooltip.css
@@ -13,7 +13,6 @@
   left: 50%;
   margin-left: -100px !important;
   position: absolute;
-  z-index: 1000;
 }
 
 .tooltip-tag-text small {
